--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -19,7 +19,7 @@
         <div class="time">{{ experience.time }}</div>
       </div><!--//upper-row-->
 
-      <a href={{experience.link}}> <div class="company">{{ experience.company }}</div></a>
+      <a target="_blank" href={{experience.link}}> <div class="company">{{ experience.company }}</div></a>
 
     </div><!--//meta-->
 
