--- a/_includes/certifications.html
+++ b/_includes/certifications.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     {% if certifications.credentialurl %}
-    <div class="cert-url">
+    <div class="details">
       <a
         href="//{{ certifications.credentialurl }}"
         target="_blank"
