--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -25,10 +25,17 @@
         {% else %}
         {{ project.title }}
         {% endif %}
+        <span class="project-skills">| HTML, CSS, JavaScript</span>
       </span>
 
       {% if project.tagline %}
       - <span class="project-tagline">{{ project.tagline }}</span>
+      {% endif %}
+
+      {% if project.responsibilities %}
+      <div class="details">
+        {{ experience.responsibilities | markdownify }}
+      </div><!--//details-->
       {% endif %}
 
     </div><!--//item-->
