--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -223,10 +223,10 @@ p {
     color: darken($theme-color, 15%);
   }
   .project-skills {
-    font-size: 12px; /* Smaller font size */
-    font-weight: 300; /* Lighter font weight */
-    margin-left: 5px; /* Some space between the title and skills text */
-    color: lighten($theme-color, 10%); /* Lighter color for differentiation */
+    font-size: 12px  !important; /* Smaller font size */
+    font-weight: 300 !important; /* Lighter font weight */
+    margin-left: 5px !important; /* Some space between the title and skills text */
+    color: lighten($theme-color, 10%) !important; /* Lighter color for differentiation */
   }
   .projects-section {
     .intro {
