--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -34,7 +34,7 @@
 
       {% if project.responsibilities %}
       <div class="details">
-        {{ experience.responsibilities | markdownify }}
+        {{ project.responsibilities | markdownify }}
       </div><!--//details-->
       {% endif %}
 
