--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -225,9 +225,9 @@ p {
 
   .project-skills {
     font-size: 12px  !important; /* Smaller font size */
-    font-weight: 300 !important; /* Lighter font weight */
+    font-weight: 500 !important; /* Lighter font weight */
     margin-left: 5px !important; /* Some space between the title and skills text */
-    color: lighten($theme-color, 10%) !important; /* Lighter color for differentiation */
+    color: rgba(256, 256, 256, 0.6) !important; /* Lighter color for differentiation */
   }
   
   .projects-section {
