--- a/_includes/post-slideshow.html
+++ b/_includes/post-slideshow.html
@@ -1,11 +1,12 @@
 {% assign project = include.project %}
-<div id="{{ project.title }}" class="carousel slide" data-ride="carousel">
+{% assign sanitized_title = project.title | replace: ' ', '-' | downcase %}
+<div id="carousel-{{ sanitized_title }}-{{ forloop.index }}" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         {% for picture in project.images %}
         {% if forloop.first == true %}
-        <li data-target="#{{ project.title }}" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-{{ sanitized_title }}-{{ forloop.index }}" data-slide-to="0" class="active"></li>
         {% else %}
-        <li data-target="#{{ project.title }}" data-slide-to="{{ forloop.index0 }}"></li>
+        <li data-target="#carousel-{{ sanitized_title }}-{{ forloop.index }}" data-slide-to="{{ forloop.index0 }}"></li>
         {% endif %}
         {% endfor %}
     </ol>
@@ -29,11 +30,11 @@
         {% endif %}
         {% endfor %}
     </div>
-    <a class="carousel-control-prev" href="#{{ project.title }}" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carousel-{{ sanitized_title }}-{{ forloop.index }}" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#{{ project.title }}" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carousel-{{ sanitized_title }}-{{ forloop.index }}" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
