--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,3 @@
 <!-- Javascript -->
+<script src="{{ site.baseurl }}/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 {% if site.analytics %} {% include analytics.html %} {% endif %}
