--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,6 @@
 /* ======= Base ======= */
 body {
+  zoom: 115% !important;
   font-family: "Roboto", sans-serif;
   color: $text-color-secondary;
   background: $smoky-white;
