--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -229,6 +229,9 @@ p {
     font-weight: 500 !important; /* Lighter font weight */
     margin-left: 5px !important; /* Some space between the title and skills text */
   }
+  .project-videos {
+    width: 100% !important;
+  }
   
   .projects-section {
     .intro {
