careousoul height fixed

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -242,6 +242,10 @@ p {
     }
   }
 
+  .carousel-inner {
+    max-height: 300px !important;
+  }
+
   .publication-title {
     font-size: 16px;
     font-weight: 400;
