--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,5 +1,5 @@
 {% assign skills = site.data.data.skills %} {% if skills %}
-<section class="skills-section section">
+<section class="container skill-section">
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
       <i class="fas fa-circle fa-stack-2x"></i>
@@ -8,19 +8,21 @@
     {{ skills.title }}
   </h2>
 
-  <div class="skillset">
+  <div class="row">
     {% for skill in skills.toolset %}
-    <div class="item">
-      <h3 class="level-title">{{ skill.name }}</h3>
-      {% assign skill_level = 'width: ' | append: skill.level %}
-      <div class="level-bar">
-        <div class="level-bar-inner" style="{{skill_level}}"></div>
-      </div>
-      <!--//level-bar-->
+    <div class="col-md-4">
+        <div class="skill-card">
+            <h3><i class={{skill.icon}}></i> {{skill.type}} </h3>
+            <ul>
+              {% for subSkill in skill.list %}
+                <li>{{subSkill.name}}</li>
+              {% endfor %}
+            </ul>
+        </div>
     </div>
-    <!--//item-->
     {% endfor %}
   </div>
+
 </section>
 <!--//skills-section-->
 {% endif %}
